--- a/index.html
+++ b/index.html
@@ -91,16 +91,12 @@
             <h3>Experience</h3>
             <p class="pubpadding"/>
             <ul>
-                <!-- <li>Argonne National Laboratory (<a href="https://www.anl.gov/dsl">ANL</a>), Computer Scientist at
-                Data Science and Learning Division, Lemont, IL, USA (Oct. 2020-Present)</li>
-                <li>Argonne National Laboratory (<a href="https://www.aps.anl.gov">ANL</a>), Computer Scientist at
-                X-ray Science Division, Lemont, IL, USA (Oct. 2020-Present)</li> --!>
                 <li>Argonne National Laboratory (<a href="https://www.anl.gov/dsl">ANL</a>), Computer Scientist at
-                Data Science and Learning Division, Lemont, IL, USA (2018-Present)</li>
+                Data Science and Learning Division, Lemont, IL, USA (2018-Present)</li> <!--2020-->
                 <li>Argonne National Laboratory (<a href="https://www.aps.anl.gov">ANL</a>), Computer Scientist at
                 X-ray Science Division, Lemont, IL, USA (2018-Present)</li>
-                <li>University of Chicago (<a href="https://www.uchicago.edu">UChicago</a>), Scientist at
-                Consortium for Advanced Science and Engineering, Chicago, IL, USA (Aug. 2020-Present)</li>
+                <li>University of Chicago (<a href="https://www.uchicago.edu">UChicago</a>), Senior Scientist at
+                Consortium for Advanced Science and Engineering, Chicago, IL, USA (Aug. 2020-Present)</li> <!--2023-->
                 <li>Argonne National Laboratory (<a href="https://www.mcs.anl.gov/">ANL</a>), Assistant Computer Scientist at
                 Mathematics and Computer Science Division, Lemont, IL, USA (Sept. 2016-2018)</li>
                 <li>Argonne National Laboratory (<a href="https://www.mcs.anl.gov/">ANL</a>), Postdoctoral Researcher at
