--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 
         <!-- Start of left division -->
         <div id="left">
-            <img src="images/TekinBicer_2022_1024h_lq_cropped.jpg" alt="ANL2022" height="256"/>
+            <!-- <img src="images/TekinBicer_2022_1024h_lq_cropped.jpg" alt="ANL2022" height="256"/> -->
+		<img src="images/tekin_anl_2017.jpg" alt="ANL2022" height="256"/>
             <h3>Contact</h3>
             <p>
             <b>E-mail</b>: <br/> 
