Updated publication list

--- a/index.html
+++ b/index.html
@@ -143,41 +143,55 @@
             <p class="pubpadding"/>
             <ul>
                 <li>
-			R. Vescovi, R. Chard, N. D. Saint, B. Blaiszik, J. Pruyne, <b>T. Bicer</b>, A. Lavens, Z. Liu, M. E. Papka, S. Narayanan, N. Schwarz, K. Chard and I. T. Foster,
-		"Linking scientific instruments and computation: Patterns, technologies, and experiences", Patterns, 2022
+                A. V Babu, T. Zhou, S. Kandel, <b>T. Bicer</b>, Z. Liu , W. Judge, D. Ching, Y. Jiang, S. Veseli, S. Henke, R. Chard, Y. Yao, E. Sirazitdinova, G. Gupta, M. Holt, I. Foster, A. Miceli, M. J. Cherukara,
+                "Deep learning at the edge enables real-time streaming ptychographic imaging", Nature Communications, 2023
                 </li>
+
                 <li>
-		C. Benmore, <b>T. Bicer</b>, M. Chan, Z. Di, D. Gürsoy, I. Hwang, N. Kuklev, D. Lin, Z. Liu, I. Lobach, Z. Qiao, L. Rebuffi, H. Sharma, X. Shi, C. Sun, Y. Yao, T. Zhou, A. Sandy, A. Miceli, Y. Sun, N. Schwarz and M. J Cherukara,
-		"Advancing AI/ML at the Advanced Photon Source", Synchrotron Radiation News, 2022
+                R. Vescovi, R. Chard, N. D. Saint, B. Blaiszik, J. Pruyne, <b>T. Bicer</b>, A. Lavens, Z. Liu, M. E. Papka, S. Narayanan, N. Schwarz, K. Chard and I. T. Foster,
+                "Linking scientific instruments and computation: Patterns, technologies, and experiences", Patterns, Cell Press, 2022
                 </li>
+
                 <li>
-		*X. Yu, V. Nikitin, D. Ching, S. Aslan, D. Gursoy and <b>T. Bicer</b>,
+                C. Benmore, <b>T. Bicer</b>, M. Chan, Z. Di, D. Gürsoy, I. Hwang, N. Kuklev, D. Lin, Z. Liu, I. Lobach, Z. Qiao, L. Rebuffi, H. Sharma, X. Shi, C. Sun, Y. Yao, T. Zhou, A. Sandy, A. Miceli, Y. Sun, N. Schwarz and M. J Cherukara,
+                "Advancing AI/ML at the Advanced Photon Source", Synchrotron Radiation News, 2022
+                </li>
+
+                <li>
+                *X. Yu, V. Nikitin, D. Ching, S. Aslan, D. Gursoy and <b>T. Bicer</b>,
                 "Scalable and accurate multi-GPU-based image reconstruction of large-scale ptychography data", Scientific Reports, 2022
                 </li>
+
                 <li>
                 *M. Hidayetoglu, <b> T. Bicer</b>, S. G. de Gonzalo, B. Ren, D. Gursoy, R. Kettimuthu, I. T. Foster and W. W. Hwu, 
                 "MemXCT: Design, Optimization, Scaling, and Reproducibility", IEEE Transactions on Parallel and Distributed Systems, 2021
                 </li>
+
                 <li>
                 S. Aslan, Z. Liu, V. Nikitin, <b> T. Bicer</b>, S. Leyffer and D. Gursoy, 
                 "Joint Ptycho-Tomography with Deep Generative Priors", Machine Learning: Science and Technology, IOPScience, 2021
                 </li>
+                
                 <li>
                 Z. Liu, <b>T. Bicer</b>, R. Kettimuthu, D. Gursoy, F. De Carlo, I. T. Foster, 
                 "TomoGAN: Low-Dose Synchrotron X-Ray Tomography with Generative Adversarial Networks", Journal of the Optical Society of America A, 2020
                 </li>
+
                 <li>
                 V. Nikitin, S. Aslan, Y. Yao, <b>T. Bicer</b>, S. Leyffer, R. Mokso and D. Gursoy, 
                 "Photon-limited ptychography of 3D objects via Bayesian reconstruction", OSA Continuum 2(10), 2019
                 </li>
+
                 <li>
                 S. Aslan, V. Nikitin, D. J. Ching, <b> T. Bicer</b>, S. Leyffer and D. Gursoy, 
                 "Joint ptycho-tomography reconstruction through alternating direction method of multipliers", Optics Express, 2019
                 </li>
+
                 <li>
                 D. J. Ching, M. Hidayetoglu, <b> T. Bicer </b> and D. Gursoy, 
                 "Rotation-as-fast-axis scanning-probe x-ray tomography: the importance of angular diversity for fly-scan modes", Applied Optics, 2018
                 </li>
+
                 <li>
                 <b>T. Bicer</b>, D. Gursoy , V. De Andrade, R. Kettimuthu, W. Scullin, F. De Carlo, I. T. Foster, 
                 "Trace: A High-Throughput Tomographic Reconstruction Engine for Large-Scale Datasets", Special Issue on High-Throughput X-Ray Imaging and Algorithms, Advanced Structural and Chemical Imaging, 2017
@@ -185,6 +199,7 @@
                 <a href="research/papers/2017asci-trace.pdf" target="_blank"><img src="images/pdf-icon20x20.png" 
                     alt="Advanced Structural and Chemical Imaging" border="0" width="15" height="15" /></a>
                 </li>
+                 
                 <li>
                 <b>T. Bicer</b>, D. Gursoy , R. Kettimuthu, F. De Carlo, I. T. Foster, 
                 "Optimization of tomographic reconstruction workflows on geographically distributed resources", Journal of Synchrotron Radiation, 2016
@@ -220,12 +235,15 @@
             <p class="pub">Conferences</p>
             <p class="pubpadding"/>
             <ul>
+
                 <li>
-                J. Chung, A. Wisniewski, W. Zacherek, Z. Liu, <b>T. Bicer</b>, R. Kettimuthu and I. T. Foster, "SciStream: Architecture and Toolkit for Data Streaming between Federated Science Instruments", 
+                J. Chung, A. Wisniewski, W. Zacherek, Z. Liu, <b>T. Bicer</b>, R. Kettimuthu and I. T. Foster, 
+                "SciStream: Architecture and Toolkit for Data Streaming between Federated Science Instruments", 
                 in Proceedings of the 31st International ACM Symposium on High-Performance Parallel and Distributed Computing (HPDC'22), June 2022.
                 <!--<a href="research/papers/2021_Yu_HPPtycho.pdf"><img src="images/pdf-icon20x20.png" 
                     alt="ics21" border=0 width=15 height=15 /></a> -->
                 </li>
+
                 <li>
                 <b>T. Bicer</b>, *X. Yu, D. Ching, R. Chard, M. Cherukara, B. Nicolae, R. Kettimuthu and I. T. Foster, "High-Performance Ptychographic Reconstruction with Federated Facilities", 
                 in Proceedings of the Smoky Mountains Computational Sciences and Engineering Conference (SMC'21), Oct. 2021.
@@ -365,12 +383,25 @@
             <p class="pubpadding"/>
             <ul>
                 <li>
-		J. Liu, B. Nicolae, D. Li, J. M. Wozniak, <b>T. Bicer</b>, Z. Liu and I. Foster,
-		"Large Scale Caching and Streaming of Training Data for Online Deep Learning"
+                A. V. Babu, <b>T. Bicer</b>, S. Kandel, T. Zhou, D. J. Ching, S. Henke, S. Veseli, R. Chard, A. Miceli, and M. Cherukara,
+                "AI-assisted Automated Workflow for Real-time X-ray Ptychography Data Analysis via Federated Resources",
+                in High Performance Computing for Imaging, Electronic Imaging Symposium, IS\&T, Jan. 2023. <font color="#cc0000">[<b>Best Paper Runner-Up</b>]</font>
+                </li>
+
+                <li>
+                H. Jamil, J. Chung, <b>T. Bicer</b>, T. Kosar, and R. Kettimuthu,
+                "Throughput Optimization with a NUMA-Aware Runtime System for Eﬀicient Scientific Data Streaming",
+                in 10th Annual International Workshop on Innovating the Network for Data-Intensive Science, Nov. 2023.
+                </li>
+
+                <li>
+                J. Liu, B. Nicolae, D. Li, J. M. Wozniak, <b>T. Bicer</b>, Z. Liu and I. Foster,
+                "Large Scale Caching and Streaming of Training Data for Online Deep Learning"
                 in Proceedings of the 12th Workshop on AI and Scientific Computing at Scale using Flexible Computing Infrastructures (Flex'22), July 2022.
                 <!--<a href="research/papers/2021_Yu_HPPtycho.pdf"><img src="images/pdf-icon20x20.png" 
                     alt="ics21" border=0 width=15 height=15 /></a> -->
                 </li>
+
                 <li>
                 <b> T. Bicer</b>, Viktor Nikitin, Selin Aslan, Doga Gursoy, Rajkumar Kettimuthu and Ian T. Foster, 
                 "Tomographic Reconstruction of Dynamic Features with Streaming Sliding Subsets",
@@ -378,6 +409,7 @@
                 <a href="research/papers/2020_Bicer_DynRecon.pdf"><img src="images/pdf-icon20x20.png" 
                     alt="xloop20" border=0 width=15 height=15 /></a>
                 </li>
+
                 <li>
                 *Ziling Wu, <b> T. Bicer</b>, Zhengchun Liu, Vincent De Andrade, Yunhui Zhu and I. T. Foster, 
                 "Deep Learning-based Low-dose Tomography Reconstruction with Hybrid-dose Measurements",
@@ -385,6 +417,7 @@
                 <a href="research/papers/2020_Wu_DL-Based_Recon.pdf"><img src="images/pdf-icon20x20.png" 
                     alt="ai4s20" border=0 width=15 height=15 /></a>
                 </li>
+
                 <li>
                 Z. Liu, **<b>T. Bicer</b>, R. Kettimuthu, I. T. Foster, 
                 "Deep Learning Accelerated Light Source Experiments",
@@ -392,13 +425,16 @@
                 <!--a href="research/papers/2015sc.pdf"><img src="images/pdf-icon20x20.png" 
                     alt="sc15" border=0 width=15 height=15 /></a -->
                 </li>
+
                 <li>
-                <b>T. Bicer</b>, D. Chiu, and G. Agrawal, "MATE-EC2: A Middleware for Processing Data with AWS",
+                <b>T. Bicer</b>, D. Chiu, and G. Agrawal, 
+                "MATE-EC2: A Middleware for Processing Data with AWS",
                 in Proceedings of the 4th Workshop on Many-Task Computing on Grids and Supercomputers (MTAGS'11), 
                 in conjunction with Supercomputing (SC), Seattle WA, Nov. 2011 <font color="#cc0000">[Invited Paper]</font>
                 <a href="research/papers/mtags2011.pdf" target="_blank"><img src="images/pdf-icon20x20.png" 
                     alt="mtags2011" border="0" width="15" height="15" /></a>
                 </li>
+
                 <li>
                 A. Raveendran, <b>T. Bicer</b>, and G. Agrawal, "A Framework for Elastic Execution of Existing MPI Programs",
                 in Proceedings of the High-Performance Grid and Cloud Computing (HPGC'11), in conjunction with the 
@@ -406,6 +442,7 @@
                 <a href="research/papers/hpgc2011.pdf" target="_blank"><img src="images/pdf-icon20x20.png" 
                     alt="ipdps2011" border="0" width="15" height="15" /></a>
                 </li>
+
                 <li>
                 <b>T. Bicer</b>, and G. Agrawal, "Supporting Dynamic Load Balancing in a Parallel Data Mining Middleware",
                 in Proceedings of the Parallel Data-Mining Workshop (PDM'11),
