--- a/index.html
+++ b/index.html
@@ -75,12 +75,16 @@
             <h3>Research Interests</h3>
             <p class="pubpadding"/>
             <ul>
+                <li>Large-Scale Parallel and Distributed Systems</li>
                 <li>High-End Computing Systems</li>
-                <!-- <li>High Performance Computing</li> -->
-                <li>Cloud and Grid Computing</li>
+                <li>High-Performance Computing</li>
+                <li>Software System Architectures</li>
+                <!--
                 <li>Big Data: Large-Scale Data Management and Processing</li>
-                <li>Parallel Programming Models: Map-Reduce and Reduction based</li>
                 <li>Software Engineering</li>
+                <li>Parallel Programming Models: Map-Reduce and Reduction based</li>
+                <li>Cloud and Grid Computing</li>
+                -->
             </ul>
 
             <h3>Education</h3>
@@ -112,17 +116,26 @@
                 Associate in CSE Department, Columbus, OH, USA (2010-2014)</li>
             </ul>
 
-            <!--
             <h3>Honors &amp; Awards</h3>
             <p class="pubpadding"/>
             <ul>
-                <li>IEEE/ACM SC 2020 Best Paper Award (out of 378 submisions)</li>
+                <li>Best Paper Runner-Up at High Performance Computing for Imaging (HPCI), Electronic Imaging Symposium (Jan. 2023)</li>
+                <li>IEEE/ACM Supercomputing 2020 Best Paper Award (out of 378 submisions)</li>
+                <li>(Two times) Impact Argonne Award for notable achievement in Innovation, Data Science and Learning Division, Argonne
+National Laboratory (June 2022, May 2020)</li>
+                <li>SCinet Technology Challenge at the Supercomputing, Top Recognition for an Exemplary blend of Network, Computing, and Storage, 2019</li>
                 <li>ACM Student Cluster Competition 2020 SIGHPC Certificate of Appreciation</li>
+                <li>SCinet Technology Challenge at the Supercomputing, Top Recognition for an Exemplary blend of Network, Computing, and Storage, 2019</li>
+                <li>Pacesetter Award for excellence in achievement and performance, Data Science and Learning Division, Argonne National Laboratory (Jan. 2019) </li>
                 <li>IEEE/ACM CCGrid 2014 Best Paper Nomination (283 submitted, 3 selected)</li>
+                <li>Travel Grants: CCGrid'14, IPDPS'13, IPDPS'10</li>
+                <!--
                 <li>IEEE/ACM CCGrid 2014 Student Travel Grant</li>
                 <li>TCPP/IPDPS 2013 Student Travel Grant</li>
                 <li>IEEE Cluster 2011 Student Travel Grant</li>
                 <li>TCPP/IPDPS 2010 Student Travel Grant</li>
+                -->
+            <!--
                 <li>Member of Upsilon Pi Epsilon (Honor Society for Computing and Information Disciplines)</li>
                 <li>Scholarship from Republic of Turkey, Ministry of National Education for graduate education (2007-2010)</li>
             -->
