--- a/index.html
+++ b/index.html
@@ -120,14 +120,12 @@
             <p class="pubpadding"/>
             <ul>
                 <li>Best Paper Runner-Up at High Performance Computing for Imaging (HPCI), Electronic Imaging Symposium (Jan. 2023)</li>
-                <li>IEEE/ACM Supercomputing 2020 Best Paper Award (out of 378 submisions)</li>
-                <li>(Two times) Impact Argonne Award for notable achievement in Innovation, Data Science and Learning Division, Argonne
-National Laboratory (June 2022, May 2020)</li>
-                <li>SCinet Technology Challenge at the Supercomputing, Top Recognition for an Exemplary blend of Network, Computing, and Storage, 2019</li>
-                <li>ACM Student Cluster Competition 2020 SIGHPC Certificate of Appreciation</li>
-                <li>SCinet Technology Challenge at the Supercomputing, Top Recognition for an Exemplary blend of Network, Computing, and Storage, 2019</li>
+                <li>Best Paper Award at IEEE/ACM Supercomputing, 2020 (out of 378 submisions)</li>
+                <li>(Two times) Impact Argonne Award for notable achievement in Innovation, Data Science and Learning Division, Argonne National Laboratory (June 2022, May 2020)</li>
+                <li>Top Recognition for an Exemplary blend of Network, Computing, and Storage, SCinet Technology Challenge at the IEEE/ACM Supercomputing, 2019</li>
+                <li>SIGHPC Certificate of Appreciation, ACM Student Cluster Competition, 2020 </li>
                 <li>Pacesetter Award for excellence in achievement and performance, Data Science and Learning Division, Argonne National Laboratory (Jan. 2019) </li>
-                <li>IEEE/ACM CCGrid 2014 Best Paper Nomination (283 submitted, 3 selected)</li>
+                <li>Best Paper Nomination at IEEE/ACM CCGrid, 2014 (283 submitted, 3 selected)</li>
                 <li>Travel Grants: CCGrid'14, IPDPS'13, IPDPS'10</li>
                 <!--
                 <li>IEEE/ACM CCGrid 2014 Student Travel Grant</li>
