again revised awards

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <li>Best Paper Runner-Up at High Performance Computing for Imaging (HPCI), Electronic Imaging Symposium (Jan. 2023)</li>
                 <li>Best Paper Award at IEEE/ACM Supercomputing, 2020 (out of 378 submisions)</li>
                 <li>(Two times) Impact Argonne Award for notable achievement in Innovation, DSL/ANL (June 2022, May 2020)</li>
-                <li>Top Recognition for an Exemplary blend of Network, Computing, and Storage, SCinet Technology Challenge at IEEE/ACM Supercomputing, 2019</li>
+                <li>Top Recognition for an Exemplary blend of Network, Computing, and Storage, SCinet Technology Challenge at Supercomputing, 2019</li>
                 <li>SIGHPC Certificate of Appreciation, ACM Student Cluster Competition, 2020 </li>
                 <li>Pacesetter Award for excellence in achievement and performance, DSL/ANL (Jan. 2019) </li>
                 <li>Best Paper Nomination at IEEE/ACM CCGrid, 2014 (283 submitted, 3 selected)</li>
