again revised awards

--- a/index.html
+++ b/index.html
@@ -116,17 +116,19 @@
                 Associate in CSE Department, Columbus, OH, USA (2010-2014)</li>
             </ul>
 
-            <h3>Honors &amp; Awards</h3>
+            <h3>Honors &amp; Awards &amp; Recognitions</h3>
             <p class="pubpadding"/>
             <ul>
                 <li>Best Paper Runner-Up at High Performance Computing for Imaging (HPCI), Electronic Imaging Symposium (Jan. 2023)</li>
                 <li>Best Paper Award at Supercomputing, 2020 (out of 378 submisions)</li>
                 <li>(Two times) Impact Argonne Award for notable achievement in Innovation, DSL/ANL (June 2022, May 2020)</li>
-                <li>Top Recognition for an Exemplary blend of Network, Computing, and Storage, SCinet Technology Challenge at Supercomputing, 2019</li>
                 <li>SIGHPC Certificate of Appreciation, ACM Student Cluster Competition at Supercomputing, 2020 </li>
+                <li>Top Recognition for an Exemplary blend of Network, Computing, and Storage, SCinet Technology Challenge at Supercomputing, 2019</li>
                 <li>Pacesetter Award for excellence in achievement and performance, DSL/ANL (Jan. 2019) </li>
                 <li>Best Paper Nomination at CCGrid, 2014 (283 submitted, 3 selected)</li>
                 <li>Travel Grants: CCGrid'14, IPDPS'13, IPDPS'10</li>
+                <br/>
+                <li>Senior Member of IEEE (2020) and ACM (2021)
                 <!--
                 <li>IEEE/ACM CCGrid 2014 Student Travel Grant</li>
                 <li>TCPP/IPDPS 2013 Student Travel Grant</li>
