again revised awards

--- a/index.html
+++ b/index.html
@@ -127,8 +127,7 @@
                 <li>Pacesetter Award for excellence in achievement and performance, DSL/ANL (Jan. 2019) </li>
                 <li>Best Paper Nomination at CCGrid, 2014 (283 submitted, 3 selected)</li>
                 <li>Travel Grants: CCGrid'14, IPDPS'13, IPDPS'10</li>
-                <br/>
-                <li>Senior Member of IEEE (2020) and ACM (2021)
+                <li>Senior Member of IEEE and ACM
                 <!--
                 <li>IEEE/ACM CCGrid 2014 Student Travel Grant</li>
                 <li>TCPP/IPDPS 2013 Student Travel Grant</li>
