--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
                 <b>T. Bicer</b>, J. Yin and G. Agrawal, 
                 "Improving I/O Throughput of Scientific Applications using Transparent Parallel Compression",
                 in Proceedings of the International Symposium on Cluster, Cloud and Grid Computing (CCGrid'14), 
-                Chicago IL, May 2014 (283 submitted, 54 accepted, 19.1% acceptance rate) <font color="#cc0000">[<b>Best Paper Nomination</b>]</font>
+                Chicago IL, May 2014 (283 submitted, 54 accepted, 19.1% acceptance rate) <b style="color:#cc0000">[Best Paper Nomination]</b>
                 <a href="research/papers/ccgrid2014.pdf" target="_blank"><img src="images/pdf-icon20x20.png" 
                     alt="ccgrid2014" border="0" width="15" height="15" /></a>
                 <a
@@ -553,7 +553,7 @@
                 <li>
                 A. V. Babu, <b>T. Bicer</b>, S. Kandel, T. Zhou, D. J. Ching, S. Henke, S. Veseli, R. Chard, A. Miceli, and M. Cherukara,
                 "AI-assisted Automated Workflow for Real-time X-ray Ptychography Data Analysis via Federated Resources",
-                in High Performance Computing for Imaging, Electronic Imaging Symposium, IS&#38;T, Jan. 2023. <font color="#cc0000">[<b>Best Paper Runner-Up</b>]</font>
+                in High Performance Computing for Imaging, Electronic Imaging Symposium, IS&#38;T, Jan. 2023. <b style="color:#cc0000">[Best Paper Runner-Up]</b>
                 </li>
 
                 <li>
@@ -598,7 +598,7 @@
                 <b>T. Bicer</b>, D. Chiu, and G. Agrawal, 
                 "MATE-EC2: A Middleware for Processing Data with AWS",
                 in Proceedings of the 4th Workshop on Many-Task Computing on Grids and Supercomputers (MTAGS'11), 
-                in conjunction with Supercomputing (SC), Seattle WA, Nov. 2011 <font color="#cc0000">[Invited Paper]</font>
+                in conjunction with Supercomputing (SC), Seattle WA, Nov. 2011 <b style="color:#cc0000">[Invited Paper]</b>
                 <a href="research/papers/mtags2011.pdf" target="_blank"><img src="images/pdf-icon20x20.png" 
                     alt="mtags2011" border="0" width="15" height="15" /></a>
                 </li>
