html errors were fixed

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
         <!-- Tab content -->
         <div id="about" class="tabcontent">
-            <p class="pubpadding"/>
+            <p class="pubpadding">
             I'm a computer scientist at Data Science and Learning (<a href="https://www.anl.gov/dsl">DSL</a>) division at <a href="https://www.anl.gov">Argonne National Laboratory</a>. I also hold joint appointments in X-ray Science division (<a href="https://www.aps.anl.gov/X-ray-Science-Division">XSD</a>) at Advanced Photon Source (<a href="https://www.aps.anl.gov/">APS</a>) and Consortium for Advanced Science and Engineering (<a href="https://researchinnovation.uchicago.edu/research-support/case/">CASE</a>) at the <a href="https://www.uchicago.edu">University of Chicago</a>. <br/>
 
             Currently, I'm working on large-scale high-performance systems that deal with compute- and data-intensive <a href="https://en.wikipedia.org/wiki/Synchrotron_light_source"> synchrotron radiation</a> imaging problems. 
@@ -106,7 +106,6 @@
             <br/>
 
             <h3>Research Interests</h3>
-            <p class="pubpadding"/>
             <ul>
                 <li>Large-Scale Parallel and Distributed Systems</li>
                 <li>High-End Computing Systems</li>
@@ -121,15 +120,17 @@
             </ul>
 
             <h3>Education</h3>
-            <p class="pubpadding"/>
-            PhD., Computer Science &amp; Engineering, Ohio State University, 2010-2014<br/>
-            MSc., Computer Science &amp; Engineering, Ohio State University, 2008-2010<br/>
-            BEng., Computer Engineering, Izmir Institute of Technology, 2001-2006<br/>
+            <ul>
+                <li>PhD., Computer Science &amp; Engineering, Ohio State University, 2010-2014</li>
+                <li>MSc., Computer Science &amp; Engineering, Ohio State University, 2008-2010</li>
+                <li>BEng., Computer Engineering, Izmir Institute of Technology, 2001-2006</li>
+            </ul>
+            </p>
         </div>
 
 
         <div id="experience" class="tabcontent">
-            <p class="pubpadding"/>
+            <p class="pubpadding">
             Throughout my career, I have been fortunate to hold the following positions: <br/> <br/>
             <ul>
                 <li>Argonne National Laboratory (<a href="https://www.anl.gov/dsl">ANL</a>), Computer Scientist at
@@ -151,10 +152,11 @@
                 <li>Ohio State University (<a href="http://www.cse.ohio-state.edu">OSU</a>), Graduate Research or Teaching 
                 Associate in CSE Department, Columbus, OH, USA (2010-2014)</li>
             </ul>
+            </p>
         </div>
 
         <div id="awards" class="tabcontent">
-            <p class="pubpadding"/>
+            <p class="pubpadding">
             Some of the awards, honors, and recognitions that I have received over the years include the following: <br/> <br/>
             <ul>
                 <li>Best Paper Runner-Up at High Performance Computing for Imaging (HPCI), Electronic Imaging Symposium (Jan. 2023)</li>
@@ -177,14 +179,15 @@
                 <li>Scholarship from Republic of Turkey, Ministry of National Education for graduate education (2007-2010)</li>
             -->
             </ul>
+            </p>
         </div>
 
         <div id="services" class="tabcontent">
-            <p class="pubpadding"/>
+            <p class="pubpadding">
             I try to serve in committees and give back to our community as much as possible. The following are some of the venues I have served: <br/>
            
            <h3>Track Chair</h3>
-	   <ul>
+             <ul>
                 <li>
                 Algorithms for Data Science, IEEE International Parallel and Distributed Processing Symposium (IPDPS 2023)
                 </li>
@@ -304,11 +307,12 @@
                 Big Data Conference (2014) 
                 </li>
                 </ul>
+        </p>
         </div>
 
         <div id="publications" class="tabcontent">
             <!--p class="pub">Journals</p-->
-            <p class="pubpadding" />
+            <p class="pubpadding">
             The following list might not be up-to-date. If you are interested in learning more about my relatively recent works, you can check my <a href="https://scholar.google.com/citations?user=vwGINy0AAAAJ" target="_blank">google scholar page</a>. 
             <h3>Journals</h3>
             <ul>
@@ -654,6 +658,7 @@
                 </li>
             </ul>
             <br/>
+            </p>
             <p style="font-size:85%;">* Supervised postdoc/interns<br/>** Equal contribution with the first author</p>
         </div>
 
@@ -685,21 +690,5 @@
       document.getElementById("defaultOpen").click();
     </script>
     <!-- end container -->
-
-    <!-- Start of Counter Code 
-    <script type="text/javascript">
-        var sc_project=6274790; 
-        var sc_invisible=1; 
-        var sc_security="7f4c3d3c"; 
-    </script>
-
-    <script type="text/javascript" src="http://www.statcounter.com/counter/counter.js"></script>
-    <noscript> 
-        <div class="statcounter">
-            <a title="web stats" href="http://statcounter.com/free-web-stats/" target="_blank">
-                <img class="statcounter" src="http://c.statcounter.com/6274790/0/7f4c3d3c/1/" alt="web stats" />
-            </a>
-        </div>
-    </noscript>
-    End of Counter Code -->
-</body></html>
+</body>
+</html>
